--- a/assets/sass/components/card.scss
+++ b/assets/sass/components/card.scss
@@ -7,7 +7,7 @@
     @include font(28px, 33px);
     font-weight: 700;
     font-family: $font-secondary;
-    margin: 0 0 px2rem(24px) 0;
+    margin: 0 0 px2rem(16px) 0;
     -webkit-font-smoothing: antialiased;
 }
 .Card-category {
@@ -73,6 +73,7 @@
     .Card-title {
         @include font(35px, 40px);
         letter-spacing: -0.5px;
+        margin: 0 0 px2rem(24px) 0;
     }
     .Card--vibrant {
         padding-left: px2rem(24px);
